--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,5 +20,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "redis": "^5.1.1"
+    "serverless-http": "^3.0.1"
   }
 }
